--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 Bierdopje Material Changelog
 
+Version 0.6.1 (14 December 2016)
+- Changed the way the billboard positions (better, but also to support Bierdopje Move).
+
 Version 0.6 (14 December 2016)
 - Userbox ajustments.
 - Added 2 common material icons.
