Added v0.9 which replaces the replybox.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 Bierdopje Material Changelog
 
+Version 0.9 (04 January 2017)
+- Fixed menu item font color when clicking it.
+- Fixed transition of the font color on menu items.
+- Changed the replybox (shown in forums and news).
+
 Version 0.8 (17 December 2016)
 - Updated a bunch of icons.
 - Added feedback on hovering or clicking new icon buttons.
