Added v0.96 which brings new unseen icons.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Bierdopje Material Changelog
 
+Version 0.96 (09 February 2017)
+- Changed the unseen/unaquired icon + animation.
+- Other fixes I don't remember :)
+
 Version 0.95 (21 January 2017)
 - Better support for Bierdopje missende series helper.
 - Font size dropdown overlap fix.
